<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	<LinearLayout
	    android:id="@+id/linear1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal">
    <TextView
        android:id="@+id/score"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/score" />
    <Button 
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        />    
</LinearLayout>
<TextView 
    android:id="@+id/answer"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_below="@id/linear1"
    android:text="@string/answer"
    />
<LinearLayout 
    android:id="@+id/linear2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/answer"
    android:orientation="horizontal"
    >
    <Button 
        android:id="@+id/btn1"
        android:layout_height="wrap_content"
        android:layout_width="45dp"
        android:text="@string/btn1"
        />
    
    <Button 
        android:id="@+id/btn2"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        />
    <Button 
        android:id="@+id/btn3"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        />
    <Button 
        android:id="@+id/btn4"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        />
    <Button 
        android:id="@+id/btn5"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        />
    <Button 
        android:id="@+id/btn6"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn6"
        />
    </LinearLayout>
    <LinearLayout 
    android:id="@+id/linear3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/linear2"
    android:orientation="horizontal"
    >
    <Button 
        android:id="@+id/btn7"
        android:layout_height="wrap_content"
        android:layout_width="45dp"
        android:text="@string/btn7"
        />
    
    <Button 
        android:id="@+id/btn8"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn8"
        />
    <Button 
        android:id="@+id/btn9"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn9"
        />
    <Button 
        android:id="@+id/btn10"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn10"
        />
    <Button 
        android:id="@+id/btn11"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn11"
        />
    <Button 
        android:id="@+id/btn12"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/btn12"
        />
    </LinearLayout>
    <LinearLayout 
    android:id="@+id/linear4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/linear3"
    android:orientation="horizontal"
    >
    <Button 
        android:id="@+id/start"
        android:layout_height="65dp"
        android:layout_width="65dp"
        android:text="@string/start"
        />
    
    <Button 
        android:id="@+id/stop"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:text="@string/stop"
        />
    <Button 
        android:id="@+id/again"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:text="@string/again"
        />
    
    <Button 
        android:id="@+id/right"
        android:layout_width="85dp"
        android:layout_height="65dp"
        android:text="@string/right"
        />
    </LinearLayout>
    <Button 
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear4"
        android:text="@string/setting" 
        android:onClick="onClickedButtonSetting"  
        />
</RelativeLayout>