<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingActivity" >
<LinearLayout 
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/key"        
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/key" />
    <Spinner 
        android:id="@+id/chords"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:entries="@array/chords"        
        />
    <Spinner         
        android:id="@+id/voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/voice"
        />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:orientation="horizontal"
        >
    <TextView        
        android:id="@+id/cadence"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/cadence"
        />
    <Spinner 
        android:id="@+id/series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
               
        />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/linear3"                     
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear2"
            android:orientation="horizontal"
            >
    <TextView
        android:id="@+id/tempo"
        android:layout_width="80dp"  
        android:layout_height="wrap_content"
        android:text="@string/tempo"
        />
    <TextView
        android:id="@+id/choose"
        android:layout_width="40dp"
        android:layout_height="wrap_content"        
        />
        <TextView 
            android:id="@+id/dpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dpm"
            />
        </LinearLayout>
        <LinearLayout 
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear3"
        android:orientation="horizontal">
            <TextView 
                android:id="@+id/check1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check1"
                />
            <CheckBox 
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onClickedCheckbox1"
                
                />
            
        </LinearLayout>

</RelativeLayout>